--- a/Views/EmpSalaryInfoes/Index.cshtml
+++ b/Views/EmpSalaryInfoes/Index.cshtml
@@ -13,21 +13,34 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.PayBand)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.BasicSalary)
             </th>
-            <th></th>
+            <th>
+                Net Salary
+            </th>
+            <th>
+                InHand Salary
+            </th>
+            
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.PayBand)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.BasicSalary)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PayBand">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PayBand">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PayBand">Delete</a>
+                @(item.BasicSalary + 0.10* item.BasicSalary + 0.05* item.BasicSalary + 0.05 * item.BasicSalary) 
+            </td>
+            <td>
+                @(item.BasicSalary + 0.10* item.BasicSalary + 0.05* item.BasicSalary + 0.05 * item.BasicSalary - 0.10* item.BasicSalary)
             </td>
         </tr>
 }
